@@ -251,7 +251,7 @@ define function, begin
 231,writeenemydata,3,0,0,0    #writes enemy data(enemy,dataposition,value)
 232,trace,1,0                 #writes the provided string to G_DEBUG.txt
 233,getsongname,2,0,0         #get song name and store in string (string id, song)
-234,loadmenu,1,-1             #show loadmenu (really load/quit?)
+234,loadmenu,2,1,1            #show loadmenu (really load/quit?, show new game)
 235,keyispressed,2,0,0        #check key by scancode, returns a bool
 236,soundisplaying,1,0        #checks to see if a sound is playing (soundID)
 #237,soundslots,0              #returns the number of slots available
